# bbcoin

./: .cirrus.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  libbitcoinkernel.pc.in  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
ci/: lint_imagefile
cmake/: introspection.cmake  tests.cmake
contrib/: README.md  valgrind.supp
depends/: Makefile  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  (+36 more)
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addresstype.h  addrman.cpp  addrman_impl.h  bbcoin-chainstate.cpp  bbcoin-cli-res.rc  bbcoin-cli.cpp  bbcoin-tx-res.rc  bbcoin-tx.cpp  bbcoin-util-res.rc  bbcoin-util.cpp  bbcoin-wallet-res.rc  bbcoin-wallet.cpp  bbcoind-res.rc  bbcoind.cpp  bip324.cpp  chain.h  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  cluster_linearize.h  coins.h  dbwrapper.cpp  httpserver.cpp  init.cpp  init.h  logging.h  mapport.cpp  net.cpp  net.h  netaddress.h  netbase.cpp  noui.h  protocol.h  random.cpp  randomenv.cpp  rest.cpp  (+3 more)
src/bench/: CMakeLists.txt  bench_bitcoin.cpp  ccoins_caching.cpp  coin_selection.cpp  wallet_create.cpp  wallet_create_tx.cpp  wallet_ismine.cpp  wallet_loading.cpp  wallet_migration.cpp
src/common/: args.cpp  init.cpp  netif.cpp  run_command.cpp  settings.cpp  settings.h  signmessage.h  system.cpp  system.h  types.h
src/compat/: byteswap.h  compat.h
src/consensus/: amount.h  tx_check.h
src/crypto/: CMakeLists.txt  muhash.cpp  muhash.h  sha256.cpp
src/crypto/ctaes/: README.md
src/index/: base.cpp
src/init/: bbcoin-gui.cpp  bbcoin-node.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  init.h  node.h
src/ipc/: CMakeLists.txt  interfaces.cpp  process.cpp  process.h
src/ipc/capnp/: common-types.h
src/kernel/: CMakeLists.txt  bbcoinkernel.cpp  chainparams.cpp  context.h
src/leveldb/util/: env_posix.cc
src/minisketch/: README.md  configure.ac
src/node/: blockstorage.cpp  caches.cpp  connection_types.h  context.h  interfaces.cpp  kernel_notifications.cpp  txdownloadman_impl.cpp  warnings.cpp
src/policy/: feerate.h  fees.cpp  policy.cpp
src/qt/: CMakeLists.txt  README.md  askpassphrasedialog.cpp  bbcoin.cpp  bbcoin.h  bbcoin.qrc  bbcoin_locale.qrc  bbcoinaddressvalidator.cpp  bbcoinaddressvalidator.h  bbcoinamountfield.cpp  bbcoinamountfield.h  bbcoingui.cpp  bbcoingui.h  bbcoinstrings.cpp  bbcoinunits.cpp  bbcoinunits.h  clientmodel.cpp  coincontroldialog.cpp  createwalletdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  macos_appnap.mm  main.cpp  modaloverlay.cpp  networkstyle.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  psbtoperationsdialog.cpp  qrimagewidget.cpp  qvalidatedlineedit.cpp  receivecoinsdialog.h  (+20 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bbcoin_am.ts  bbcoin_ar.ts  bbcoin_az.ts  bbcoin_az@latin.ts  bbcoin_be.ts  bbcoin_bg.ts  bbcoin_bn.ts  bbcoin_br.ts  bbcoin_bs.ts  bbcoin_ca.ts  bbcoin_cmn.ts  bbcoin_cs.ts  bbcoin_cy.ts  bbcoin_da.ts  bbcoin_de.ts  bbcoin_de_CH.ts  bbcoin_el.ts  bbcoin_en.ts  bbcoin_en.xlf  bbcoin_eo.ts  bbcoin_es.ts  bbcoin_es_CL.ts  bbcoin_es_CO.ts  bbcoin_es_DO.ts  bbcoin_es_MX.ts  bbcoin_es_SV.ts  bbcoin_es_VE.ts  bbcoin_et.ts  bbcoin_eu.ts  bbcoin_fa.ts  bbcoin_fi.ts  bbcoin_fil.ts  bbcoin_fo.ts  bbcoin_fr.ts  bbcoin_fr_CM.ts  bbcoin_fr_LU.ts  bbcoin_ga.ts  bbcoin_ga_IE.ts  bbcoin_gl.ts  bbcoin_gl_ES.ts  (+72 more)
src/qt/res/: bbcoin-qt-res.rc
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  apptests.cpp  optiontests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  external_signer.cpp  mempool.cpp  mining.cpp  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  register.h  request.h  server.cpp  signmessage.cpp  util.cpp  util.h
src/script/: interpreter.cpp  interpreter.h  miniscript.h
src/secp256k1/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  configure.ac  libsecp256k1.pc.in
src/secp256k1/doc/: release-process.md
src/secp256k1/examples/: ecdsa.c
src/secp256k1/include/: secp256k1.h  secp256k1_musig.h  secp256k1_schnorrsig.h
src/secp256k1/src/: tests.c
src/secp256k1/src/modules/schnorrsig/: tests_impl.h
src/secp256k1/src/wycheproof/: WYCHEPROOF_COPYING  ecdsa_secp256k1_sha256_bitcoin_test.json
src/test/: CMakeLists.txt  README.md  amount_tests.cpp  argsman_tests.cpp  blockmanager_tests.cpp  compress_tests.cpp  fs_tests.cpp  getarg_tests.cpp  ipc_test.cpp  ipc_tests.cpp  logging_tests.cpp  main.cpp  miner_tests.cpp  miniscript_tests.cpp  net_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  settings_tests.cpp  streams_tests.cpp  system_tests.cpp  txpackage_tests.cpp  util_tests.cpp  validationinterface_tests.cpp
src/test/data/: tx_valid.json
src/test/fuzz/: CMakeLists.txt  bech32.cpp
src/test/fuzz/util/: CMakeLists.txt
src/test/util/: cluster_linearize.h  setup_common.cpp  setup_common.h
src/univalue/test/: object.cpp
src/util/: CMakeLists.txt  check.cpp  exception.cpp  fs_helpers.cpp  syserror.cpp  threadnames.cpp  tokenpipe.cpp  trace.h
src/wallet/: CMakeLists.txt  bdb.cpp  db.cpp  dump.cpp  external_signer_scriptpubkeyman.cpp  init.cpp  sqlite.cpp  transaction.h  types.h  wallet.cpp  wallet.h  walletdb.cpp  wallettool.cpp  walletutil.h
src/wallet/rpc/: addresses.cpp  backup.cpp  coins.cpp  encrypt.cpp  signmessage.cpp  spend.cpp  transactions.cpp  wallet.cpp
src/wallet/test/: CMakeLists.txt  coinselector_tests.cpp  db_tests.cpp  spend_tests.cpp  util.h  wallet_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt  coinselection.cpp  wallet_bdb_parser.cpp
src/zmq/: CMakeLists.txt
(+315 files in other folders)
